k8s/gitops/base/sampledata.yaml
apiVersion: v1
kind: Service
metadata:
  name: sampledata
  namespace: yas
spec:
  selector:
    app: sampledata
  ports:
    - name: http
      port: 80
      targetPort: http

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sampledata
  namespace: yas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sampledata
  template:
    metadata:
      labels:
        app: sampledata
    spec:
      enableServiceLinks: false

      nodeSelector:
        kubernetes.io/hostname: yas-worker-32gb

      containers:
        - name: sampledata
          image: anhhnus/sampledata-service:main
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 8080

          startupProbe:
            tcpSocket:
              port: http
            periodSeconds: 5
            failureThreshold: 60

          readinessProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
            failureThreshold: 6

          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 60
            periodSeconds: 20
            failureThreshold: 3

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 750m
              memory: 768Mi
