k8s/gitops/base/11-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity
  namespace: yas
spec:
  selector:
    app: keycloak
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yas-ingress
  namespace: yas
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: storefront.yas.local.com
      http:
        paths:
          - path: /swagger-ui
            pathType: Prefix
            backend:
              service:
                name: swagger-ui
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: storefront-bff
                port:
                  number: 80

    - host: backoffice.yas.local.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backoffice-bff
                port:
                  number: 80

    - host: identity.yas.local.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: identity
                port:
                  number: 80
